<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NearbyPlaces</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="get_nearby_places">Get nearby places</string>
    <string name="edit">Edit</string>
    <string name="name_">Name:</string>
    <string name="done">Done</string>
    <string name="take_picture">Take picture</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="address_">Address:</string>
    <string name="post_to_flickr">Post to Flickr</string>
    <string name="delete">Delete</string>
    <string name="upload_to_google_drive">Upload to Google Drive</string>
    <string name="file_upload">File upload</string>
    <string name="upload_done">Upload done</string>
    <string name="upload_finished">Upload finished</string>
    <string name="uploading_">Uploading...</string>
    <string name="please_enable_the_internet_connection_">Please enable the internet connection!</string>

</resources>
