<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/fragmentMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/editButtonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/done" />
        
         <Button
            android:id="@+id/editButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/delete" />

        <Button
            android:id="@+id/editButtonTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/take_a_picture" />

        <LinearLayout
            android:id="@+id/editLinearName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editButtonDone"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/name_" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editLinearAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editLinearName"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/address_" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="170dp"
                android:padding="5dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/editImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editLinearAddress"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/editTextPost"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editImage"
            android:layout_alignTop="@+id/editImage"
            android:background="#00aa00"
            android:text="@string/upload_to_google_drive"
            android:textColor="#000000"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>